# bincode-macro

./: README.md
bincode_macro/: Cargo.toml  README.md
bincode_macro/src/: lib.rs
bincode_macro_usage/: Cargo.toml
bincode_macro_usage/src/: main.rs
