[package]
name = "bincode_macro"
version = "0.1.2"
edition = "2021"
authors = ["Felicity Yin <yinjingping2022@gmail.com>"]
description = "Add macros to bincode to make it easier to use"
license = "MIT"
repository = "https://github.com/felicityin/bincode-macro"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
