[package]
name = "bincode_macro_usage"
version = "0.1.2"
edition = "2021"
authors = ["Felicity Yin <yinjingping2022@gmail.com>"]
description = "Add macros to bincode to make it easier to use"
license = "MIT"
repository = "https://github.com/felicityin/bincode-macro"

[dependencies]
bincode = { version = "=2.0.0-rc.3" }
bincode_macro = "0.1"
